#16301 Integration tests for AjaxDirectorServlet part1